--- a/src/app/landing/components/nav/nav.component.html
+++ b/src/app/landing/components/nav/nav.component.html
@@ -16,10 +16,10 @@
         <a href="#how-it-works" class="text-surface-300 hover:text-white transition-all duration-300 font-medium">Cómo
           funciona</a>
         <div class="flex space-x-4">
-          <a href="login.html"
+          <a routerLink="/auth/login"
             class="text-white px-4 py-2 rounded-xl font-medium hover:bg-surface-800 transition-all duration-300">Iniciar
             sesión</a>
-          <a href="register.html"
+          <a routerLink="/auth/register"
             class="bg-gradient-to-r from-primary to-secondary text-white px-6 py-2.5 rounded-xl font-semibold hover:shadow-lg hover:shadow-primary/25 transition-all duration-300">Registrarse</a>
         </div>
       </div>
