feat: add employee dashboard

--- a/src/app/landing/pages/home/home.component.html
+++ b/src/app/landing/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div
   class="bg-gradient-to-br from-surface-950 via-surface-900 to-surface-950 min-h-screen font-sans antialiased text-white overflow-x-hidden">
 
-  <app-nav />
+  <app-landing-nav />
 
   <main>
 
