--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -15,30 +15,47 @@
     </div>
 
     <!-- Login Form -->
-    <form class="space-y-6" action="#" method="POST">
+    <form class="space-y-6" [formGroup]="loginForm" (ngSubmit)="OnSubmit()">
       <!-- Email Field -->
-      <div class="space-y-2">
+      <div class=" space-y-2 relative">
         <label for="email" class="block text-sm font-medium text-surface-300">
           Correo Electrónico
         </label>
         <input id="email" name="email" type="email" autocomplete="email" required
           class="w-full px-4 py-3 bg-surface-900/60 backdrop-blur-xl border border-surface-800/50 text-white rounded-xl placeholder-surface-500 focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary/50 transition-all duration-300 shadow-xl shadow-black/20 ring-1 ring-white/5"
-          placeholder="tu@email.com">
+          placeholder="tu@email.com" formControlName="email" />
+
+        @if (validators.isValidField(loginForm, "email")) {
+        <div class="mt-2 flex items-center text-sm text-error gap-1 absolute bottom-[-1.5rem] left-0">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 fill-current" viewBox="0 0 24 24">
+            <path d="M1 21h22L12 2 1 21zm13-3h-2v-2h2v2zm0-4h-2v-4h2v4z" />
+          </svg>
+          <span>{{ validators.getFieldError(loginForm, "email") }}</span>
+        </div>
+        }
       </div>
 
       <!-- Password Field -->
-      <div class="space-y-2">
+      <div class="space-y-2 relative">
         <label for="password" class="block text-sm font-medium text-surface-300">
           Contraseña
         </label>
         <input id="password" name="password" type="password" autocomplete="current-password" required
           class="w-full px-4 py-3 bg-surface-900/60 backdrop-blur-xl border border-surface-800/50 text-white rounded-xl placeholder-surface-500 focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary/50 transition-all duration-300 shadow-xl shadow-black/20 ring-1 ring-white/5"
-          placeholder="••••••••">
+          placeholder="••••••••" formControlName="password" />
+
+        @if (validators.isValidField(loginForm, "password")) {
+        <div class="mt-2 flex items-center text-sm text-error gap-1 absolute bottom-[-1.5rem] left-0">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 fill-current" viewBox="0 0 24 24">
+            <path d="M1 21h22L12 2 1 21zm13-3h-2v-2h2v2zm0-4h-2v-4h2v4z" />
+          </svg>
+          <span>{{ validators.getFieldError(loginForm, "password") }}</span>
+        </div>
+        }
       </div>
 
       <!-- Remember me and Forgot password -->
       <div class="flex items-center justify-between">
-
         <div class="text-sm">
           <a href="/auth/forgot-password"
             class="font-medium text-primary hover:text-secondary transition-colors duration-200">
@@ -72,7 +89,7 @@
         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
         </svg>
-        <a (click)="goBack()" class="cursor-pointer">Volver al inicio de sesión</a>
+        <span>Volver al inicio de sesión</span>
       </a>
     </div>
   </div>
