--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
 <router-outlet />
+<ngx-sonner-toaster position="top-right" theme="dark" [richColors]="true" [closeButton]="true" [duration]="5000" />
