--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -26,11 +26,15 @@
           placeholder="tu@email.com" formControlName="email" />
 
         @if (validators.isValidField(loginForm, "email")) {
-        <div class="mt-2 flex items-center text-sm text-error gap-1 absolute bottom-[-1.5rem] left-0">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 fill-current" viewBox="0 0 24 24">
-            <path d="M1 21h22L12 2 1 21zm13-3h-2v-2h2v2zm0-4h-2v-4h2v4z" />
-          </svg>
-          <span>{{ validators.getFieldError(loginForm, "email") }}</span>
+        <div
+          class="absolute -top-2 right-3 flex items-center gap-1.5 group bg-surface-900/80 backdrop-blur-sm px-2 py-1 rounded-full border border-surface-700 shadow-lg">
+          <div class="relative flex h-2.5 w-2.5">
+            <div class="animate-ping absolute inline-flex h-full w-full rounded-full bg-accent/70 opacity-80"></div>
+            <div class="relative inline-flex rounded-full h-2.5 w-2.5 bg-gradient-to-br from-accent to-secondary"></div>
+          </div>
+          <span class="text-[11px] font-medium text-accent">
+            {{ validators.getFieldError(loginForm, "email") }}
+          </span>
         </div>
         }
       </div>
@@ -42,14 +46,18 @@
         </label>
         <input id="password" name="password" type="password" autocomplete="current-password" required
           class="w-full px-4 py-3 bg-surface-900/60 backdrop-blur-xl border border-surface-800/50 text-white rounded-xl placeholder-surface-500 focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary/50 transition-all duration-300 shadow-xl shadow-black/20 ring-1 ring-white/5"
-          placeholder="••••••••" formControlName="password" />
+          placeholder="••••••••" formControlName="password">
 
         @if (validators.isValidField(loginForm, "password")) {
-        <div class="mt-2 flex items-center text-sm text-error gap-1 absolute bottom-[-1.5rem] left-0">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 fill-current" viewBox="0 0 24 24">
-            <path d="M1 21h22L12 2 1 21zm13-3h-2v-2h2v2zm0-4h-2v-4h2v4z" />
-          </svg>
-          <span>{{ validators.getFieldError(loginForm, "password") }}</span>
+        <div
+          class="absolute -top-2 right-3 flex items-center gap-1.5 group bg-surface-900/80 backdrop-blur-sm px-2 py-1 rounded-full border border-surface-700 shadow-lg">
+          <div class="relative flex h-2.5 w-2.5">
+            <div class="animate-ping absolute inline-flex h-full w-full rounded-full bg-accent/70 opacity-80"></div>
+            <div class="relative inline-flex rounded-full h-2.5 w-2.5 bg-gradient-to-br from-accent to-secondary"></div>
+          </div>
+          <span class="text-[11px] font-medium text-accent">
+            {{ validators.getFieldError(loginForm, "password") }}
+          </span>
         </div>
         }
       </div>
