feat: add ceo flow

--- a/src/app/auth/pages/success-register/success-register.component.html
+++ b/src/app/auth/pages/success-register/success-register.component.html
@@ -30,9 +30,9 @@
   </p>
 
   <!-- Button -->
-  <a href="login.html"
+  <a routerLink="/auth/login"
     class="inline-flex items-center justify-center px-6 py-4 bg-gradient-to-r from-primary to-accent text-white font-medium rounded-xl hover:shadow-2xl hover:shadow-primary/30 transition-all duration-300 transform hover:scale-[1.02] active:scale-95 group mb-12">
-    <span>Continuar</span>
+    <span>Iniciar Sesion</span>
     <svg class="w-5 h-5 ml-2 transition-transform duration-300 group-hover:translate-x-1" fill="none"
       stroke="currentColor" viewBox="0 0 24 24">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
