--- a/src/app/auth/pages/verify-email/verify-email.component.html
+++ b/src/app/auth/pages/verify-email/verify-email.component.html
@@ -51,24 +51,28 @@
         <p class="text-primary font-medium">correo</p>
       </div>
 
-      <form class="space-y-6" action="success-register.html" method="get">
+      <form class="space-y-6" [formGroup]="verifyEmailForm" (ngSubmit)="onSubmit()">
         <div class="space-y-2">
           <label class="block text-sm font-medium text-surface-300">
             Código de Verificación
           </label>
-          <div class="flex space-x-2 justify-center">
-            <input type="text" maxlength="1"
-              class="w-12 h-12 text-center text-xl font-bold bg-surface-900/60 backdrop-blur-xl border border-surface-800/50 text-white rounded-xl focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary/50 transition-all duration-300 shadow-xl shadow-black/20 ring-1 ring-white/5">
-            <input type="text" maxlength="1"
-              class="w-12 h-12 text-center text-xl font-bold bg-surface-900/60 backdrop-blur-xl border border-surface-800/50 text-white rounded-xl focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary/50 transition-all duration-300 shadow-xl shadow-black/20 ring-1 ring-white/5">
-            <input type="text" maxlength="1"
-              class="w-12 h-12 text-center text-xl font-bold bg-surface-900/60 backdrop-blur-xl border border-surface-800/50 text-white rounded-xl focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary/50 transition-all duration-300 shadow-xl shadow-black/20 ring-1 ring-white/5">
-            <input type="text" maxlength="1"
-              class="w-12 h-12 text-center text-xl font-bold bg-surface-900/60 backdrop-blur-xl border border-surface-800/50 text-white rounded-xl focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary/50 transition-all duration-300 shadow-xl shadow-black/20 ring-1 ring-white/5">
-            <input type="text" maxlength="1"
-              class="w-12 h-12 text-center text-xl font-bold bg-surface-900/60 backdrop-blur-xl border border-surface-800/50 text-white rounded-xl focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary/50 transition-all duration-300 shadow-xl shadow-black/20 ring-1 ring-white/5">
-            <input type="text" maxlength="1"
-              class="w-12 h-12 text-center text-xl font-bold bg-surface-900/60 backdrop-blur-xl border border-surface-800/50 text-white rounded-xl focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary/50 transition-all duration-300 shadow-xl shadow-black/20 ring-1 ring-white/5">
+          <div class="flex justify-center">
+            <input type="text" name="codigo" maxlength="6"
+              class="tracking-[1em] text-center w-[30rem] text-xl font-bold bg-surface-900/60 backdrop-blur-xl border border-surface-800/50 text-white rounded-xl focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary/50 transition-all duration-300 shadow-xl shadow-black/20 ring-1 ring-white/5 px-4 py-3"
+              placeholder="• • • • • •" autocomplete="off" inputmode="numeric" pattern="\d{6}" formControlName="code" />
+            @if (validators.isValidField(verifyEmailForm, "code")) {
+            <div
+              class="absolute -top-2 right-3 flex items-center gap-1.5 group bg-surface-900/80 backdrop-blur-sm px-2 py-1 rounded-full border border-surface-700 shadow-lg">
+              <div class="relative flex h-2.5 w-2.5">
+                <div class="animate-ping absolute inline-flex h-full w-full rounded-full bg-accent/70 opacity-80"></div>
+                <div class="relative inline-flex rounded-full h-2.5 w-2.5 bg-gradient-to-br from-accent to-secondary">
+                </div>
+              </div>
+              <span class="text-[11px] font-medium text-accent">
+                {{ validators.getFieldError(verifyEmailForm, "code") }}
+              </span>
+            </div>
+            }
           </div>
           <p class="text-xs text-surface-500 text-center">Ingresa el código de 6 dígitos que recibiste</p>
         </div>
@@ -90,6 +94,8 @@
           </div>
         </div>
       </form>
+
+
     </div>
 
     <!-- Back to Login -->
