--- a/src/app/shared/components/register/register.component.html
+++ b/src/app/shared/components/register/register.component.html
@@ -41,18 +41,18 @@
     </div>
 
     <!-- Registration Form -->
-    <form class="space-y-6" [formGroup]="registerForm">
+    <form class="space-y-6" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
       <!-- Nombre -->
-      <div class="space-y-2 relative">
+      <div class=" space-y-2 relative">
         <label for="nombre" class="block text-sm font-medium text-surface-300">
           Nombre *
         </label>
         <input id="nombre" name="nombre" type="text" required
           class="w-full px-4 py-3 bg-surface-900/60 backdrop-blur-xl border border-surface-800/50 text-white rounded-xl placeholder-surface-500 focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary/50 transition-all duration-300 shadow-xl shadow-black/20 ring-1 ring-white/5"
-          placeholder="Ej: Juan" formControlName="name" />
+          placeholder="Ej: Juan" formControlName="Nombre" />
         <p class="text-xs text-surface-500">Solo letras y apóstrofes (')</p>
 
-        @if (validators.isValidField(registerForm, "name")) {
+        @if (validators.isValidField(registerForm, "Nombre")) {
         <div
           class="absolute -top-2 right-3 flex items-center gap-1.5 group bg-surface-900/80 backdrop-blur-sm px-2 py-1 rounded-full border border-surface-700 shadow-lg">
           <div class="relative flex h-2.5 w-2.5">
@@ -60,7 +60,7 @@
             <div class="relative inline-flex rounded-full h-2.5 w-2.5 bg-gradient-to-br from-accent to-secondary"></div>
           </div>
           <span class="text-[11px] font-medium text-accent">
-            {{ validators.getFieldError(registerForm, "name") }}
+            {{ validators.getFieldError(registerForm, "Nombre") }}
           </span>
         </div>
         }
@@ -73,10 +73,10 @@
         </label>
         <input id="lastName" name="lastName" type="text" required
           class="w-full px-4 py-3 bg-surface-900/60 backdrop-blur-xl border border-surface-800/50 text-white rounded-xl placeholder-surface-500 focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary/50 transition-all duration-300 shadow-xl shadow-black/20 ring-1 ring-white/5"
-          placeholder="Ej: Pérez" formControlName="lastName" />
+          placeholder="Ej: Pérez" formControlName="Apellido" />
         <p class="text-xs text-surface-500">Solo letras y apóstrofes (')</p>
 
-        @if (validators.isValidField(registerForm, "lastName")) {
+        @if (validators.isValidField(registerForm, "Apellido")) {
         <div
           class="absolute -top-2 right-3 flex items-center gap-1.5 group bg-surface-900/80 backdrop-blur-sm px-2 py-1 rounded-full border border-surface-700 shadow-lg">
           <div class="relative flex h-2.5 w-2.5">
@@ -84,7 +84,7 @@
             <div class="relative inline-flex rounded-full h-2.5 w-2.5 bg-gradient-to-br from-accent to-secondary"></div>
           </div>
           <span class="text-[11px] font-medium text-accent">
-            {{ validators.getFieldError(registerForm, "lastName") }}
+            {{ validators.getFieldError(registerForm, "Apellido") }}
           </span>
         </div>
         }
@@ -96,10 +96,10 @@
         </label>
         <input id="username" name="username" type="text" required
           class="w-full px-4 py-3 bg-surface-900/60 backdrop-blur-xl border border-surface-800/50 text-white rounded-xl placeholder-surface-500 focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary/50 transition-all duration-300 shadow-xl shadow-black/20 ring-1 ring-white/5"
-          placeholder="Ej: juan_perez23" formControlName="username" />
+          placeholder="Ej: juan_perez23" formControlName="NombreUsuario" />
         <p class="text-xs text-surface-500">Empieza con letra, puede contener números</p>
 
-        @if (validators.isValidField(registerForm, "username")) {
+        @if (validators.isValidField(registerForm, "NombreUsuario")) {
         <div
           class="absolute -top-2 right-3 flex items-center gap-1.5 group bg-surface-900/80 backdrop-blur-sm px-2 py-1 rounded-full border border-surface-700 shadow-lg">
           <div class="relative flex h-2.5 w-2.5">
@@ -107,7 +107,7 @@
             <div class="relative inline-flex rounded-full h-2.5 w-2.5 bg-gradient-to-br from-accent to-secondary"></div>
           </div>
           <span class="text-[11px] font-medium text-accent">
-            {{ validators.getFieldError(registerForm, "username") }}
+            {{ validators.getFieldError(registerForm, "NombreUsuario") }}
           </span>
         </div>
         }
@@ -121,12 +121,22 @@
           <div class="relative">
             <div
               class="w-16 h-16 rounded-full bg-surface-800/50 border border-surface-700/50 flex items-center justify-center overflow-hidden shadow-xl shadow-black/20 ring-1 ring-white/5">
+
+
+              @if(tempImage()) {
+              <img [src]="tempImage()" alt="temp image" class="w-full h-full object-cover" />
+              } @else {
               <svg class="w-8 h-8 text-surface-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
               </svg>
+              }
+
             </div>
-            <input type="file" id="fotoPerfil" name="fotoPerfil" accept="image/*" class="hidden">
+            <input type="file" id="fotoPerfil" name="FotoPerfil" accept=".png, .jpg, .jpeg, jpg" class="hidden"
+              (change)="onFilesChanged($event)" formControlName="FotoPerfil">
+
+
           </div>
           <div class="flex-1">
             <label for="fotoPerfil"
@@ -144,9 +154,9 @@
         </label>
         <input id="email" name="email" type="email" autocomplete="email" required
           class="w-full px-4 py-3 bg-surface-900/60 backdrop-blur-xl border border-surface-800/50 text-white rounded-xl placeholder-surface-500 focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary/50 transition-all duration-300 shadow-xl shadow-black/20 ring-1 ring-white/5"
-          placeholder="Ej: juan@email.com" formControlName="email" />
+          placeholder="Ej: juan@email.com" formControlName="Correo" />
 
-        @if (validators.isValidField(registerForm, "email")) {
+        @if (validators.isValidField(registerForm, "Correo")) {
         <div
           class="absolute -top-2 right-3 flex items-center gap-1.5 group bg-surface-900/80 backdrop-blur-sm px-2 py-1 rounded-full border border-surface-700 shadow-lg">
           <div class="relative flex h-2.5 w-2.5">
@@ -154,7 +164,7 @@
             <div class="relative inline-flex rounded-full h-2.5 w-2.5 bg-gradient-to-br from-accent to-secondary"></div>
           </div>
           <span class="text-[11px] font-medium text-accent">
-            {{ validators.getFieldError(registerForm, "email") }}
+            {{ validators.getFieldError(registerForm, "Correo") }}
           </span>
         </div>
         }
@@ -169,8 +179,8 @@
         <div class="relative">
           <input id="password" [type]="showPassword ? 'text' : 'password'" autocomplete="new-password" required
             class="w-full px-4 py-3 bg-surface-900/60 backdrop-blur-xl border border-surface-800/50 text-white rounded-xl placeholder-surface-500 focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary/50 transition-all duration-300 shadow-xl shadow-black/20 ring-1 ring-white/5 pr-10"
-            placeholder="••••••••" formControlName="password"
-            (input)="registerForm.get('confirmPassword')?.updateValueAndValidity()" />
+            placeholder="••••••••" formControlName="Contrasena"
+            (input)="registerForm.get('Contrasena')?.updateValueAndValidity()" />
           <button type="button" (click)="togglePasswordVisibility()"
             class="absolute right-3 top-1/2 transform -translate-y-1/2 text-surface-400 hover:text-surface-200 focus:outline-none"
             [attr.aria-label]="showPassword ? 'Ocultar contraseña' : 'Mostrar contraseña'">
@@ -189,7 +199,7 @@
         </div>
         <p class="text-xs text-surface-500">Mínimo 8 caracteres, con mayúscula y número</p>
 
-        @if (validators.isValidField(registerForm, "password")) {
+        @if (validators.isValidField(registerForm, "Contrasena")) {
         <div
           class="absolute -top-2 right-3 flex items-center gap-1.5 group bg-surface-900/80 backdrop-blur-sm px-2 py-1 rounded-full border border-surface-700 shadow-lg">
           <div class="relative flex h-2.5 w-2.5">
@@ -197,14 +207,14 @@
             <div class="relative inline-flex rounded-full h-2.5 w-2.5 bg-gradient-to-br from-accent to-secondary"></div>
           </div>
           <span class="text-[11px] font-medium text-accent">
-            {{ validators.getFieldError(registerForm, "password") }}
+            {{ validators.getFieldError(registerForm, "Contrasena") }}
           </span>
         </div>
         }
       </div>
 
       <!-- Confirmar Contraseña -->
-      <div class="space-y-2 relative">
+      <!-- <div class="space-y-2 relative">
         <label for="confirmPassword" class="block text-sm font-medium text-surface-300">
           Confirmar Contraseña *
         </label>
@@ -243,7 +253,7 @@
           </span>
         </div>
         }
-      </div>
+      </div> -->
 
       <!-- Submit Button -->
       <button type="submit"
