--- a/src/app/employee-dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/employee-dashboard/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <body class="bg-gradient-to-br from-surface-950 via-surface-900 to-surface-950 min-h-screen font-sans antialiased">
   <!-- Header -->
-  <app-nav />
+  <app-nav [title]="'Ceo Dashboard'" [description]="'no se compai'" [imageProfile]="''" [profileId]="id" />
 
   <div class="max-w-7xl mx-auto px-4 sm:px-6 py-8">
     <!-- Quick Stats -->
