refactor: move nav to ceo layout

--- a/src/app/ceo-dashboard/layout/ceo-layout/ceo-layout.component.html
+++ b/src/app/ceo-dashboard/layout/ceo-layout/ceo-layout.component.html
@@ -1,1 +1,5 @@
-<router-outlet />
+<div class="bg-surface-900 min-h-screen">
+  <app-nav [title]="'Boardly'" [description]="'Ceo Dashboard'" [profileId]="id" />
+
+  <router-outlet />
+</div>
